[tool.poetry]
name = "haya"
version = "0.1.0"
description = "A python tool to download files fast from AWS S3"
authors = ["Rajeshwar Agrawal <rajeshwaragrawal101@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
